// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<View /> as should render View as div 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif"
      color="shade.980"
      data-testid="ds-text"
    >
      simple div
    </div>
  </div>
</div>
`;

exports[`<View /> as should render View as p 1`] = `
<div>
  <p
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif"
      color="shade.980"
      data-testid="ds-text"
    >
      simple p
    </div>
  </p>
</div>
`;

exports[`<View /> as should render View as span 1`] = `
<div>
  <span
    class="Viewweb__View-sc-1o0hmxm-0 eayzPs"
  >
    <div
      class="Textweb__Text-sc-1qrdpx3-0 dcXoif"
      color="shade.980"
      data-testid="ds-text"
    >
      simple span
    </div>
  </span>
</div>
`;
